--- a/Base/res/html/misc/display-grid.html
+++ b/Base/res/html/misc/display-grid.html
@@ -121,6 +121,16 @@ that I don't quite understand. -->
   <div class="grid-item">4</div>
 </div>
 
+<!-- Grid gap and auto-fit -->
+<div 
+  class="grid-container"
+  style="
+    grid-column-gap: 1px;
+    grid-template-columns: repeat(auto-fit, 48px);
+  ">
+  <div class="grid-item">1</div>
+</div>
+  
 <p>End of crash tests</p>
 
 <!-- Different column sizes -->
