Base: Add test for multiple line names in CSS Grid

--- a/Base/res/html/misc/display-grid.html
+++ b/Base/res/html/misc/display-grid.html
@@ -131,6 +131,15 @@ that I don't quite understand. -->
   <div class="grid-item">1</div>
 </div>
   
+<div 
+  class="grid-container"
+  style="
+    grid-column-gap: 1px;
+    grid-template-columns: [name1 name2 name3] 1fr repeat(1, [name4 name5 name6] 1fr);
+  ">
+  <div class="grid-item">1</div>
+</div>
+  
 <p>End of crash tests</p>
 
 <!-- Different column sizes -->
