LibWeb: Avoid re-encoding response headers
isomorphic encoding a value that has already been encoded will
result in garbage data. `response_headers` is already encoded in
ISO-8859-1/latin1, we cannot use `from_string_pair`, as it triggers
ISO-8859-1/latin1 encoding.

Follow-up of https://github.com/LadybirdBrowser/ladybird/pull/1893

--- a/Tests/LibWeb/Text/input/http-non-ascii-content-type.html
+++ b/Tests/LibWeb/Text/input/http-non-ascii-content-type.html
@@ -12,7 +12,8 @@
                 },
             });
 
-            const blob = await fetch(url).then((response) => response.blob());
+            const headers = await fetch(url).then((response) => response.headers);
+            println("Content-Type:" + headers.get("Content-Type"));
             println("PASS (didn't crash)");
         } catch (err) {
             println("FAIL - " + err);
