--- a/Base/res/ladybird/newtab.html
+++ b/Base/res/ladybird/newtab.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>New Tab</title>
     <style>
-        /* FIXME: We should be able to remove the HTML style when "color-scheme" is supported */
-        @media (prefers-color-scheme: dark) {
-            html {
-                background-color: rgb(20, 20, 20);
-            }
+        html {
+            color-scheme: light dark;
         }
     </style>
 </head>
