LibWeb: Require existing Selection for `.execCommand("selectAll")`
Disable the command if no selection is available. This is a spec bug:

https://github.com/w3c/editing/issues/475

Fixes #3325

--- a/Tests/LibWeb/Text/input/Editing/execCommand-selectAll.html
+++ b/Tests/LibWeb/Text/input/Editing/execCommand-selectAll.html
@@ -33,5 +33,17 @@
         // Perform selectAll
         document.execCommand('selectAll');
         reportSelection();
+
+        // Report whether command is enabled and make sure it does not crash
+        const documents = [
+            document,
+            new Document(),
+            document.implementation.createHTMLDocument(),
+        ];
+        for (const doc of documents) {
+            println(doc.queryCommandEnabled('selectAll'));
+            doc.execCommand('selectAll');
+        }
+        println('Did not crash!');
     });
 </script>
